--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -541,7 +541,8 @@ body.users_page_bp-signups td.count_sent {
   width: 15%;
 }
 
-#bp-activities-form #the-comment-list td.comment img {
+#bp-activities-form #the-comment-list td.comment img,
+#bp-activities-form #the-comment-list td.comment video {
   max-width: 300px;
   display: block;
   margin: 0.6em 0;
