--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -100,7 +100,9 @@ TABLE OF CONTENTS:
 
 		&:before {
 			color: #23282d; /* wp toolbar */
-			font: 400 30px/0.6 dashicons;
+			font-family: "Font Awesome 5 Brands";
+			font-size: 27px;
+			font-weight: 400;
 			speak: none;
 			-webkit-font-smoothing: antialiased;
 			-moz-osx-font-smoothing: grayscale;
@@ -114,12 +116,16 @@ TABLE OF CONTENTS:
 			color: var(--bp-hello-color-primary);
 		}
 
+		&.youtube:before {
+			content: "\f167";
+		}
+
 		&.twitter:before {
-			content: "\f301";
+			content: "\f099";
 		}
 
 		&.facebook:before {
-			content: "\f304";
+			content: "\f082";
 		}
 	}
 }
