--- a/src/bp-core/admin/css/hello.css
+++ b/src/bp-core/admin/css/hello.css
@@ -103,6 +103,7 @@ TABLE OF CONTENTS:
 
 .bp-hello-social li a.twitter:before {
   content: "\f099";
+  margin-left: 2px;
 }
 
 .bp-hello-social li a.facebook:before {
