--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3096,6 +3096,11 @@ body.buddypress.bp-user #page #primary .entry-header {
   margin-top: 15px;
 }
 
+#avatar-crop-actions a.avatar-crop-cancel {
+  color: #555;
+  margin-top: 15px;
+}
+
 /**
 *-----------------------------------------
 * @subsection 5.2.1.2 - Group Members List
@@ -5414,8 +5419,7 @@ button[data-bp-close]:hover {
   color: #777;
 }
 
-/*-------------------------------------*\
-	HINT.css - A CSS tooltip library
+/*-------------------------------------*	HINT.css - A CSS tooltip library
 \*-------------------------------------*/
 /**
  * HINT.css is a tooltip library made in pure CSS.
@@ -9876,7 +9880,7 @@ ul.bb-albums-list .bb-more-photos strong {
   content: " ";
   position: absolute;
   background: #000;
-  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 70%, rgba(0, 0, 0, 0) 100%);
+  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 70%, transparent 100%);
   border-radius: 3px;
   width: 100%;
   height: 100%;
