Integrations - simpler HTML/CSS

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -359,8 +359,7 @@ tr.bp-search-parent-field label {
 /*
  * 2.6 Settings - Cards
  */
-.bp-admin-card,
-.bp-integration-card {
+.bp-admin-card {
   position: relative;
   margin-top: 20px;
   padding: 2.2em 2.8em 2em;
@@ -372,14 +371,12 @@ tr.bp-search-parent-field label {
   background: #fff;
 }
 
-.bp-admin-card .form-table td p,
-.bp-integration-card .form-table td p {
+.bp-admin-card .form-table td p {
   color: #999;
   margin-top: 6px;
 }
 
-.bp-admin-card h2,
-.bp-integration-card h2 {
+.bp-admin-card h2 {
   line-height: 40px;
   margin: 0 0 1em;
   padding-bottom: 1.2em;
@@ -389,12 +386,11 @@ tr.bp-search-parent-field label {
   border-bottom: 1px solid #eaeaea;
 }
 
-.bp-admin-card h2 span,
-.bp-integration-card h2 span {
+.bp-admin-card h2 span {
   font-weight: 400;
 }
 
-.bp-admin-card h2:before {
+body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   margin-left: 1em;
@@ -415,7 +411,7 @@ tr.bp-search-parent-field label {
 }
 
 /* Default */
-.bp-admin-card h2:before {
+body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before {
   content: "\f0ad";
 }
 
@@ -520,7 +516,7 @@ tr.bp-search-parent-field label {
 }
 
 /* Integrations */
-.bp-integration-card h2 {
+body.buddyboss_page_bp-integrations .bp-admin-card h2 {
   background-repeat: no-repeat;
   background-position: right top;
   background-size: 40px;
@@ -528,27 +524,25 @@ tr.bp-search-parent-field label {
 }
 
 /* Integrations - AppBoss */
-.bp-integration-card.section-bp_appboss_disabled h2 {
+.bp-admin-card.section-bp_appboss-integration h2 {
   background-image: url(../../images/admin/admin_icon-appboss.png);
 }
 
 /* Integrations - LearnDash */
-.bp-integration-card.section-bp_ld_sync-buddypress h2,
-.bp-integration-card.section-bp_ld_sync-learndash h2,
-.bp-integration-card.section-bp_ld_sync-reports h2,
-.bp-integration-card.section-bp_ld_disabled h2 {
+.bp-admin-card.section-bp_ld-integration h2,
+.bp-admin-card.section-bp_ld_sync-buddypress h2,
+.bp-admin-card.section-bp_ld_sync-learndash h2,
+.bp-admin-card.section-bp_ld_sync-reports h2 {
   background-image: url(../../images/admin/admin_icon-learndash.png);
 }
 
 /* Integrations - MemberPress */
-.bp-integration-card.section-bp-memberpress_disabled h2,
-.bp-integration-card.section-bp-memberpress-section h2 {
+.bp-admin-card.section-bp-memberpress-integration h2 {
   background-image: url(../../images/admin/admin_icon-memberpress.png);
 }
 
 /* Integrations - WooCommerce */
-.bp-integration-card.section-bp-woocommerce_disabled h2,
-.bp-integration-card.section-bp-woocommerce-section h2 {
+.bp-admin-card.section-bp-woocommerce-integration h2 {
   background-image: url(../../images/admin/admin_icon-woocommerce.png);
 }
 
