--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -386,19 +386,20 @@ tr.bp-search-parent-field label {
   border-bottom: 1px solid #eaeaea;
 }
 
-.bp-admin-card h2 span {
+body .bp-admin-card h2 span {
   font-weight: 400;
 }
 
-body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before {
+/* body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before */
+body .bp-admin-card h2:before {
   display: inline-block;
   content: " ";
-  background-size: 20px;
+  background-size: 18px 18px;
   background-repeat: no-repeat;
   background-position: center;
   background-color: #f6f6f6;
-  height: 40px;
-  width: 40px;
+  height: 38px;
+  width: 38px;
   border-radius: 50px;
   vertical-align: middle;
   margin-right: 15px;
@@ -416,12 +417,14 @@ body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before {
 
 .bp-admin-card.section-bp_member_type_settings h2:before {
   background-image: url(../../images/admin/icons/fontawesome/solid/user-tag.svg);
-  text-align: right;
+  background-size: 22px 22px;
+  background-position-x: 10px;
 }
 
 .bp-admin-card.section-bp_profile_search_settings h2:before {
   background-image: url(../../images/admin/icons/fontawesome/solid/user-plus.svg);
-  text-align: right;
+  background-size: 21px 21px;
+  background-position-x: 10px;
 }
 
 /* Activity */
@@ -431,6 +434,9 @@ body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before {
 
 .buddyboss_page_bp-settings .section-bp_custom_post_type h2:before {
   background-image: url(../../images/admin/icons/fontawesome/solid/thumbtack.svg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  background-position-y: 11px;
 }
 
 /* Invites */
@@ -445,7 +451,7 @@ body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before {
 
 .bp-admin-card.section-bp_groups_types h2:before {
   background-image: url(../../images/admin/icons/fontawesome/solid/cubes.svg);
-  /*font-size: 20px;*/
+  background-size: 20px 20px;
 }
 
 .bp-admin-card.section-bp_groups_hierarchies h2:before {
@@ -455,6 +461,7 @@ body:not(.buddyboss_page_bp-integrations) .bp-admin-card h2:before {
 /* Connections */
 .bp-admin-card.section-bp_friends h2:before {
   background-image: url(../../images/admin/icons/fontawesome/solid/user-friends.svg);
+  background-size: 21px 21px;
 }
 
 /* Forums */
