hello popup icons

--- a/src/bp-core/admin/css/hello-rtl.css
+++ b/src/bp-core/admin/css/hello-rtl.css
@@ -7,7 +7,9 @@ Loaded in wp-admin for query string `hello=buddyboss`.
 TABLE OF CONTENTS:
 --------------------------------------------------------------------------------
 1.0 - Typography and colour
-2.0 - Dashicons
+2.0 - Icons
+	2.1 - Dashicons
+	2.2 - Social Icons
 3.0 - Elements
 	3.1 - Backdrop and container
 	3.2 - Modal footer
@@ -54,8 +56,11 @@ TABLE OF CONTENTS:
 }
 
 /*------------------------------------------------------------------------------
- * 2.0 - Dashicons
+ * 2.0 - Icons
  *----------------------------------------------------------------------------*/
+/*
+ * 2.1 - Dashicons
+ */
 .bp-hello-close .button {
   padding: 5px !important;
 }
@@ -78,36 +83,38 @@ TABLE OF CONTENTS:
   color: var(--bp-hello-color-primary);
 }
 
+/*
+ * 2.2 - Social Icons
+ */
 .bp-hello-social li a:before {
   color: #23282d;
   /* wp toolbar */
-  font-family: "Font Awesome 5 Brands";
-  font-size: 27px;
-  font-weight: 400;
-  speak: none;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: none !important;
+  display: inline-block;
+  content: " ";
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f6f6f6;
+  height: 38px;
+  width: 38px;
+  border-radius: 50px;
+  vertical-align: middle;
 }
 
 .bp-hello-social li a:hover:before {
-  -webkit-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
-  color: var(--bp-hello-color-primary);
+  background-color: #eee;
 }
 
 .bp-hello-social li a.youtube:before {
-  content: "\f167";
+  background-image: url(../../images/admin/icons/fontawesome/brands/youtube.svg);
 }
 
 .bp-hello-social li a.twitter:before {
-  content: "\f099";
-  margin-right: 2px;
+  background-image: url(../../images/admin/icons/fontawesome/brands/twitter.svg);
 }
 
 .bp-hello-social li a.facebook:before {
-  content: "\f082";
+  background-image: url(../../images/admin/icons/fontawesome/brands/facebook-square.svg);
 }
 
 /*------------------------------------------------------------------------------
@@ -158,6 +165,7 @@ TABLE OF CONTENTS:
 
 .bp-hello-social-links ul {
   display: inline-block;
+  margin: 2px 0 0;
 }
 
 .bp-hello-social li {
@@ -166,10 +174,7 @@ TABLE OF CONTENTS:
   display: inline-block;
   list-style-type: none;
   margin-bottom: 0;
-}
-
-.bp-hello-social li:last-child a {
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 /*
