--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -219,9 +219,74 @@ TABLE OF CONTENTS:
 	margin-bottom: 10px;
 }
 
-#bp-admin-component-form .wp-list-table.plugins .plugin-title {
-	width: 25%;
-	padding-bottom: 15px;
+#bp-admin-component-form .wp-list-table.plugins {
+
+	.plugin-title {
+		width: 25%;
+		padding-bottom: 15px;
+	}
+
+	.plugin-title:before {
+		display: inline-block;
+		content: " ";
+		background-size: 18px 18px;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-color: #f6f6f6;
+		height: 38px;
+		width: 38px;
+		border-radius: 50px;
+		vertical-align: middle;
+		margin-right: 15px;
+	}
+
+	#members .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/user.svg);
+	}
+
+	#xprofile .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/user.svg);
+	}
+
+	#settings .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/tools.svg);
+	}
+
+	#notifications .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/bell.svg);
+	}
+
+	#groups .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/cube.svg);
+	}
+
+	#forums .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/comment-dots.svg);
+	}
+
+	#activity .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/rss-square.svg);
+	}
+
+	#media .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/camera-retro.svg);
+	}
+
+	#messages .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/tools.svg);
+	}
+
+	#friends .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/user-friends.svg);
+	}
+
+	#invites .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/envelope.svg);
+	}
+
+	#search .plugin-title:before {
+		background-image: url(../../images/admin/icons/fontawesome/solid/search.svg);
+	}
 }
 
 #bp-admin-component-form .subsubsub {
