--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -216,76 +216,31 @@ TABLE OF CONTENTS:
   margin-bottom: 10px;
 }
 
-#bp-admin-component-form .wp-list-table.plugins {
-  /*
-	.plugin-title:before {
-		display: block;
-		float: left;
-		content: " ";
-		background-size: 18px 18px;
-		background-repeat: no-repeat;
-		background-position: center;
-		background-color: #f6f6f6;
-		height: 38px;
-		width: 38px;
-		border-radius: 50px;
-		vertical-align: middle;
-		margin-right: 15px;
-	}
-
-	#members .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/user.svg);
-	}
-
-	#xprofile .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/user.svg);
-	}
-
-	#settings .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/tools.svg);
-	}
-
-	#notifications .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/bell.svg);
-	}
-
-	#groups .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/cube.svg);
-	}
-
-	#forums .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/comment-dots.svg);
-	}
-
-	#activity .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/rss-square.svg);
-	}
-
-	#media .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/camera-retro.svg);
-	}
-
-	#messages .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/tools.svg);
-	}
-
-	#friends .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/user-friends.svg);
-	}
-
-	#invites .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/envelope.svg);
-	}
-
-	#search .plugin-title:before {
-		background-image: url(../../images/admin/icons/fontawesome/solid/search.svg);
-	}
-	*/
+#bp-admin-component-form .wp-list-table.plugins .active td,
+#bp-admin-component-form .wp-list-table.plugins .active th {
+  background: #fff;
+  box-shadow: none;
 }
 
 #bp-admin-component-form .wp-list-table.plugins .plugin-title {
-  width: 25%;
-  padding: 15px 9px;
+  padding: 15px 15px 0;
+}
+
+#bp-admin-component-form .wp-list-table.plugins .plugin-title .plugin-item {
+  position: relative;
+  border-width: 1px;
+  border-color: #d2d2d2;
+  border-style: solid;
+  background-color: #fafafa;
+  box-shadow: 0 1px 0 #d2d2d2;
+  padding: 14px;
+  border-radius: 3px;
+}
+
+#bp-admin-component-form .wp-list-table.plugins .plugin-title strong {
+  font-weight: 500;
+  font-size: 15px;
+  margin-bottom: 10px;
 }
 
 #bp-admin-component-form .subsubsub {
