Activity > Link Previews and Some fixes

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -42,6 +42,7 @@
 		outline: none;
 		box-shadow: none;
 		min-height: 80px;
+		overflow: hidden;
 		padding: 10px;
 	}
 
@@ -109,6 +110,7 @@
 			&:empty:before {
 				content: attr(placeholder);
 				color: #bbb;
+				cursor: text;
 				display: block; /* For Firefox */
 			}
 
