--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -422,11 +422,13 @@
 
 #activity-url-scrapper {
 	border: 1px solid rgba(0, 0, 0, 0.07);
+	border-radius: 4px;
 	background-color: rgba(250, 250, 250, 0.2);
 	margin: 20px 0 10px;
 	overflow: hidden;
 	position: relative;
 	padding: 15px;
+	max-width: 540px;
 }
 
 #activity-url-scrapper-text-holder {
