#407 - profile social networks

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3529,6 +3529,17 @@ body.register .buddypress-wrap .page ul {
   opacity: 1;
 }
 
+.social-networks-wrap span.social {
+  display: inline-block;
+  width: 20px;
+  margin-right: 10px;
+}
+
+.social-networks-wrap svg {
+  width: 100%;
+  vertical-align: middle;
+}
+
 @media screen and (max-width: 782px) {
   .member-header-actions.action {
     margin-top: 15px;
@@ -5419,8 +5430,7 @@ button[data-bp-close]:hover {
   color: #777;
 }
 
-/*-------------------------------------*\
-	HINT.css - A CSS tooltip library
+/*-------------------------------------*	HINT.css - A CSS tooltip library
 \*-------------------------------------*/
 /**
  * HINT.css is a tooltip library made in pure CSS.
@@ -9881,7 +9891,7 @@ ul.bb-albums-list .bb-more-photos strong {
   content: " ";
   position: absolute;
   background: #000;
-  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 70%, rgba(0, 0, 0, 0) 100%);
+  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 70%, transparent 100%);
   border-radius: 3px;
   width: 100%;
   height: 100%;
