--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -599,52 +599,6 @@ body.users_page_bp-signups td.count_sent {
   margin: 0.6em 0;
 }
 
-.activity-attached-gif-container {
-	cursor: pointer;
-	max-width: 480px;
-}
-
-.activity-attached-gif-container .gif-player {
-	position: relative;
-	max-width: 480px;
-}
-
-.activity-attached-gif-container .gif-player video {
-	margin: 0;
-}
-
-.activity-attached-gif-container .gif-play-button {
-	height: 80px;
-	width: 80px;
-	position: absolute;
-	left: 29%;
-	margin-left: -32px;
-	top: 69%;
-	margin-top: -44px;
-}
-
-.activity-attached-gif-container .gif-play-button span.dashicons {
-	font-size: 80px;
-	width: 80px;
-	height: 80px;
-	margin: 0;
-	padding: 0;
-	line-height: 0;
-}
-
-.activity-attached-gif-container .gif-icon {
-	background: url(../../images/gif-symbol.png) bottom left no-repeat;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	display: block;
-	bottom: 30px;
-	left: 10px;
-	background-size: 40px 30px;
-	max-width: 40px;
-	max-height: 30px;
-}
-
 /*
  * 3.3 Groups List
  */
@@ -761,6 +715,7 @@ table.bp-post-type thead th {
 
 table.bp-post-type tbody th {
   width: 23%;
+  vertical-align: top;
 }
 
 table.bp-post-type tbody td input[type="checkbox"] {
