--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -719,7 +719,7 @@ body.post-type-bp-group-type #group-type-shortcode {
 	display: inline-block;
 }
 
-table.bp-post-type {
+table.bp-postbox-table {
 	background: #f9f9f9;
 	margin-top: 22px;
 	border-radius: 3px;
